Change collect to toList.